Add generated netlists for black box cores
These two ngc files were built using mlib_devel tag vlbi-devel-2010-10-22.

vsi_fmt_core.ngc was built slightly earlier than that, but changes between then
and vlbi-devel-2010-10-22 are not relevant to vsi_fmt_core.

Also modifying .gitignore to ignore the contents of mssge/*_core/ directories
expect for the *_core.ngc files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 *.asv
 *sysgen.log
 *sysgen_error.log
-# Ignore directories containing generated netlists
-*_core/
+# Ignore contents of directories containing generated
+# netlists, but not the generated netlists themselves
+mssge/*_core/*
+!mssge/*_core/*_core.ngc
 bit_files/
 !mssge/bit_files/
 core_info.m
